added everything for publish

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -4,25 +4,30 @@
     "storage": "./src/resource/db3.sqlite3",
     "seederStorage": "sequelize",
     "jwtSecret": "Apple ball cat",
-    "swaggerApplicationName": "Thapathali Alumni API V1 - Dev",
+    "swaggerApplicationName": "VOG API V1 - Dev",
     "baseApiPath": "/api/v1"
   },
-
   "test": {
     "dialect": "sqlite",
     "storage": "./src/resource/db3.sqlite3",
     "seederStorage": "sequelize",
     "jwtSecret": "Apple ball cat",
-    "swaggerApplicationName": "Thapathali Alumni API V1 - Test/Staging",
+    "swaggerApplicationName": "VOG API V1 - Test/Staging",
     "baseApiPath": "/api/v1"
   },
-
   "production": {
-    "dialect": "sqlite",
-    "storage": "./src/resource/db3.sqlite3",
+    "dialect": "postgres",
     "seederStorage": "sequelize",
     "jwtSecret": "Apple ball cat egg fat goat",
-    "swaggerApplicationName": "Thapathali Alumni API V1 - Prod",
-    "baseApiPath": "/api/v1"
+    "swaggerApplicationName": "VOG API V1 - Prod",
+    "baseApiPath": "/api/v1",
+    "protocol": "postgres",
+    "dialectOptions": {
+      "ssl": {
+        "require": true,
+        "rejectUnauthorized": false
+      }
+    },
+    "use_env_variable": "DATABASE_URL"
   }
 }
