--- a/package.json
+++ b/package.json
@@ -14,16 +14,19 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "express-jwt": "^6.0.0",
     "express-validation": "^3.0.5",
     "glob": "^7.1.6",
     "helmet": "^3.23.3",
     "http-status": "^1.4.2",
+    "http-status-codes": "^2.1.4",
     "joi": "^17.1.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.19",
     "morgan": "~1.9.1",
+    "pg": "^8.5.1",
     "sequelize": "^6.3.3",
     "sequelize-json-schema": "^2.1.1",
     "sqlite3": "^5.0.0",
