--- a/src/config/config.json
+++ b/src/config/config.json
@@ -27,7 +27,11 @@
     "jwtSecret": "Apple ball cat egg fat goat",
     "swaggerApplicationName": "VOG API V1 - Prod",
     "baseApiPath": "/api/v1",
-    "protocol": "postgres",
-    "use_env_variable": "DATABASE_URL"
+    "use_env_variable": "DATABASE_URL",
+    "dialectOptions": {
+      "ssl": {
+        "require": true
+      }
+    }
   }
 }
